--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,183 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin-top: 40px;
+  height: 30px;
+  margin-bottom: 15px;
 }
 
-.header img {
-  margin-top: 20px;
-  height: 30px;
-  margin-bottom: 10px;
+.header1 {
+  border-top: gray 2px solid;
+  background-color: #d4d4d4;
+  width: 100%;
+  height: 3rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-shadow: 5px 5px 5px #ccc8c8;
+          box-shadow: 5px 5px 5px #ccc8c8;
+}
+
+.header1 .fa-map-marker-alt {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 50px;
+  height: 50px;
+  position: relative;
+  top: 15px;
+}
+
+.header2 {
+  background-color: #d4d4d4;
+  height: 250px;
+  margin-top: -10px;
+  margin-bottom: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.header2 .button {
+  width: 250px;
+  height: 70px;
+  color: white;
+  background-color: #9356dc;
+  border-radius: 30px;
+  border: #9356dc;
+  font-size: large;
+  -webkit-box-shadow: 5px 5px 5px 2px #636161;
+          box-shadow: 5px 5px 5px 2px #636161;
+}
+
+.works {
+  width: 95%;
+  height: 70px;
+  background-color: #d4d4d4;
+  border-radius: 20px;
+  position: relative;
+  left: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  justify-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-shadow: 5px 5px 5px #acaaaa;
+          box-shadow: 5px 5px 5px #acaaaa;
+  margin-bottom: 20px;
+}
+
+.works .fa-mobile-alt {
+  position: relative;
+  right: 20px;
+}
+
+.works .fa-list-ul {
+  position: relative;
+  right: 20px;
+}
+
+.works .fa-store {
+  position: relative;
+  right: 20px;
+}
+
+.works .circle {
+  width: 35px;
+  height: 35px;
+  background-color: #9356dc;
+  border-radius: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+  right: 120px;
+}
+
+.works .circle p {
+  color: white;
+}
+
+.first {
+  border-radius: 20px 20px;
+  padding-bottom: 1px;
+  width: 92%;
+  background-color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 30px;
+}
+
+.first .fa-heart {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  position: relative;
+  left: 90%;
+  bottom: 50px;
+}
+
+.first img {
+  width: 100%;
+  height: 230px;
+  border-radius: 20px 20px 00px 00px;
+}
+
+.Restaurants {
+  margin-top: 80px;
+  width: 100%;
+  height: 1600px;
+  background-color: #d4d4d4;
+}
+
+.footer {
+  background-color: #292626;
+  width: 100%;
+  height: 500px;
 }
 /*# sourceMappingURL=styles.css.map */
