--- a/styles.scss
+++ b/styles.scss
@@ -1,5 +1,78 @@
+$purple:#9356dc ;
+$pink:#ff79da;
+$mint:#99e2d0;
+$grey:#d4d4d4;
 
-
+@mixin Restauran {
+    border-radius: 20px 20px;
+    padding-bottom: 1px;
+    width:92% ;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-items: center;
+    align-items: center;
+    display: block;
+    margin: 0 auto;
+    .fa-heart{
+        display: flex;
+        position: relative;
+        left: 90%;
+        bottom: 50px;
+    }
+    
+    img{
+        width: 100%;
+        height: 230px;
+        border-radius: 20px 20px 00px 00px;   
+    }
+    margin-bottom: 30px;
+}
+    
+@mixin  section {
+    width: 95%;
+    height: 70px;
+    background-color:$grey;
+    border-radius: 20px;
+    position: relative;
+    left: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-items: center;
+    justify-content: center;
+    align-items: center;
+    .fa-mobile-alt{
+        position: relative;
+        right: 20px;
+        
+    }
+    .fa-list-ul{
+        position: relative;
+        right: 20px;
+        
+    }
+    .fa-store{
+        position: relative;
+        right: 20px;
+        
+    }
+    .circle{
+        width: 35px;
+        height: 35px;
+        background-color: $purple;
+        border-radius: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        right: 120px;
+        p{
+            color: white;
+        }
+    }
+    box-shadow: 5px 5px 5px rgb(172, 170, 170);
+    margin-bottom: 20px;   
+}
 
 
 
@@ -7,9 +80,73 @@
 .header {
     display: flex;
     justify-content: center;
-    img {
-        margin-top: 20px;
-        height: 30px;
-        margin-bottom: 10px;
+    margin-top: 40px;
+    height: 30px;
+    margin-bottom: 15px;
+}
+
+.header1 {
+    border-top: gray 2px solid;
+    background-color: $grey;
+    width: 100%;
+    height: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .fa-map-marker-alt {
+        display: flex;
+        justify-content: center;
+        width: 50px;
+        height: 50px;
+        position: relative;
+        top: 15px;
     }
+    box-shadow: 5px 5px 5px rgb(204, 200, 200);
+}
+
+.header2 {
+    background-color:$grey;
+    height: 250px;
+    margin-top: -10px;
+    margin-bottom: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    .button {
+        width: 250px;
+        height: 70px;
+        color: white;
+        background-color:$purple;
+        border-radius: 30px;
+        border: $purple;
+        font-size: large;
+        box-shadow: 5px 5px 5px 2px rgb(99, 97, 97);
+        
+    }
+}
+
+.works{
+    @include section;
+}
+
+.first{
+    @include Restauran
+}
+
+.Restaurants{
+    margin-top: 80px;
+    width: 100%;
+    height: 1600px;
+    background-color: $grey;
+    
+    
+    
+}
+
+.footer{
+    background-color:rgb(41, 38, 38);
+    width: 100%;
+    height: 500px;
+  
 }
