--- a/styles.scss
+++ b/styles.scss
@@ -1,3 +1,6 @@
+.body{
+    font-family: 'Roboto', sans-serif;
+}
 $purple:#9356dc ;
 $pink:#ff79da;
 $mint:#99e2d0;
@@ -23,10 +26,11 @@ $grey:#d4d4d4;
     
     img{
         width: 100%;
-        height: 230px;
+        height: 200px;
         border-radius: 20px 20px 00px 00px;   
     }
     margin-bottom: 30px;
+    box-shadow: 5px 5px 5px rgb(155, 152, 152);
 }
     
 @mixin  section {
@@ -117,7 +121,7 @@ $grey:#d4d4d4;
         width: 250px;
         height: 70px;
         color: white;
-        background-color:$purple;
+        background-color:#c55fa8;
         border-radius: 30px;
         border: $purple;
         font-size: large;
@@ -137,7 +141,7 @@ $grey:#d4d4d4;
 .Restaurants{
     margin-top: 80px;
     width: 100%;
-    height: 1600px;
+    height: 1500px;
     background-color: $grey;
     
     
@@ -148,5 +152,26 @@ $grey:#d4d4d4;
     background-color:rgb(41, 38, 38);
     width: 100%;
     height: 500px;
-  
+    img{
+        width: 150px;  
+    }
+  p{
+      color: white;
+  }
+  i{
+      color:white
+  }
+  display: flex;
+  flex-direction: column;
+  .sub{
+      display:flex;
+      justify-content:flex-start;
+      flex-direction: column;
+      
+      
+  }
+  .log{
+    font-family: 'Shrikhand', cursive;
+    font-size: 25px;
+  }
 }
