--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-.body {
+.body p {
   font-family: 'Roboto', sans-serif;
 }
 
@@ -15,7 +15,8 @@
 }
 
 .header1 {
-  border-top: gray 2px solid;
+  border-top: 4px inherit;
+  border-color: #1d1c1b;
   background-color: #d4d4d4;
   width: 100%;
   height: 3rem;
@@ -28,8 +29,6 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-shadow: 5px 5px 5px #ccc8c8;
-          box-shadow: 5px 5px 5px #ccc8c8;
 }
 
 .header1 .fa-map-marker-alt {
@@ -69,18 +68,33 @@
   width: 250px;
   height: 70px;
   color: white;
-  background-color: #c55fa8;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#ff79da), to(#9356dc));
+  background-image: linear-gradient(#ff79da, #9356dc);
   border-radius: 30px;
   border: #9356dc;
-  font-size: large;
+  font-size: 15px;
   -webkit-box-shadow: 5px 5px 5px 2px #636161;
           box-shadow: 5px 5px 5px 2px #636161;
+  cursor: pointer;
+  overflow: hidden;
+  padding: 1.85rem 3rem;
+  position: relative;
+  -webkit-transition: -webkit-transform 450ms;
+  transition: -webkit-transform 450ms;
+  transition: transform 450ms;
+  transition: transform 450ms, -webkit-transform 450ms;
+}
+
+.header2 .button:hover {
+  -webkit-transform: scale(1.13);
+          transform: scale(1.13);
+  background-color: #c02e97;
 }
 
 .works {
   width: 95%;
   height: 70px;
-  background-color: #d4d4d4;
+  background-color: #f1f1f1;
   border-radius: 20px;
   position: relative;
   left: 10px;
@@ -101,6 +115,10 @@
   -webkit-box-shadow: 5px 5px 5px #acaaaa;
           box-shadow: 5px 5px 5px #acaaaa;
   margin-bottom: 20px;
+  -webkit-transition: -webkit-transform 1200ms;
+  transition: -webkit-transform 1200ms;
+  transition: transform 1200ms;
+  transition: transform 1200ms, -webkit-transform 1200ms;
 }
 
 .works .fa-mobile-alt {
@@ -140,6 +158,12 @@
   color: white;
 }
 
+.works:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+  background-color: #c28db3;
+}
+
 .first {
   border-radius: 20px 20px;
   padding-bottom: 1px;
@@ -158,9 +182,22 @@
           align-items: center;
   display: block;
   margin: 0 auto;
+  cursor: pointer;
+  overflow: hidden;
+  position: relative;
+  -webkit-transition: -webkit-transform 450ms;
+  transition: -webkit-transform 450ms;
+  transition: transform 450ms;
+  transition: transform 450ms, -webkit-transform 450ms;
   margin-bottom: 30px;
+  line-height: 5px;
   -webkit-box-shadow: 5px 5px 5px #9b9898;
           box-shadow: 5px 5px 5px #9b9898;
+}
+
+.first:hover {
+  -webkit-transform: scale(1.13);
+          transform: scale(1.13);
 }
 
 .first .fa-heart {
@@ -169,13 +206,28 @@
   display: flex;
   position: relative;
   left: 90%;
-  bottom: 50px;
+  bottom: 40px;
+  -webkit-transition: -webkit-transform 800ms;
+  transition: -webkit-transform 800ms;
+  transition: transform 800ms;
+  transition: transform 800ms, -webkit-transform 800ms;
+  cursor: pointer;
+}
+
+.first .fa-heart:hover {
+  -webkit-transform: scale(1.5);
+          transform: scale(1.5);
+  color: #99e2d0;
 }
 
 .first img {
   width: 100%;
   height: 200px;
   border-radius: 20px 20px 00px 00px;
+}
+
+.first .imgtext {
+  margin-left: 20px;
 }
 
 .Restaurants {
@@ -188,7 +240,8 @@
 .footer {
   background-color: #292626;
   width: 100%;
-  height: 500px;
+  height: 200px;
+  line-height: 2px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -198,15 +251,13 @@
           flex-direction: column;
 }
 
-.footer img {
-  width: 150px;
-}
-
 .footer p {
+  margin-left: 20px;
   color: white;
 }
 
 .footer i {
+  margin-left: 20px;
   color: white;
 }
 
@@ -217,10 +268,9 @@
   -webkit-box-pack: start;
       -ms-flex-pack: start;
           justify-content: flex-start;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .footer .log {
