--- a/menu.scss
+++ b/menu.scss
@@ -34,6 +34,18 @@ $grey:#f1f1f1;
             left: 20px;
             bottom: 10px; 
         }
+        @keyframes section{
+            0% {
+                transform: scaleX(0);
+            }
+
+            50%{
+                transform: scaleX(0.5);
+            }
+            100% {
+                transform: scaleX(1);
+            }
+        }
         
     }
     
