--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@
 .header1 {
   border-top: 4px inherit;
   border-color: #1d1c1b;
-  background-color: #d4d4d4;
+  background-color: #f1f1f1;
   width: 100%;
   height: 3rem;
   display: -webkit-box;
@@ -45,7 +45,7 @@
 }
 
 .header2 {
-  background-color: #d4d4d4;
+  background-color: #f1f1f1;
   height: 250px;
   margin-top: -10px;
   margin-bottom: 40px;
@@ -55,6 +55,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  justify-items: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -73,8 +74,8 @@
   border-radius: 30px;
   border: #9356dc;
   font-size: 15px;
-  -webkit-box-shadow: 5px 5px 5px 2px #636161;
-          box-shadow: 5px 5px 5px 2px #636161;
+  -webkit-box-shadow: inset 0 6px 5px -3px rgb;
+          box-shadow: inset 0 6px 5px -3px rgb;
   cursor: pointer;
   overflow: hidden;
   padding: 1.85rem 3rem;
@@ -234,7 +235,7 @@
   margin-top: 80px;
   width: 100%;
   height: 1500px;
-  background-color: #d4d4d4;
+  background-color: #f1f1f1;
 }
 
 .footer {
