--- a/styles.scss
+++ b/styles.scss
@@ -101,9 +101,11 @@ $grey:#f1f1f1;
     transition: transform 1200ms;
             &:hover {
             transform: scale(1.1);
-            background-color: #c28db3
-            
+            background-color: #c28db3 
         }
+       
+        
+        
 }
 
 @mixin Footer {   
@@ -169,6 +171,7 @@ $grey:#f1f1f1;
         top: 15px;
     }
     
+    
 }
 
 .header2 {
@@ -190,7 +193,7 @@ $grey:#f1f1f1;
         border-radius: 30px;
         border: $purple;
         font-size: 15px;
-        box-shadow: inset 0 6px 5px -3px rgb(0 0 0 / 30%);
+        box-shadow: inset 0 6px 5px -3px rgb;
         cursor: pointer;
     overflow: hidden;
     padding: 1.85rem 3rem;
