--- a/menu.css
+++ b/menu.css
@@ -113,6 +113,9 @@ body {
           flex-direction: column;
   line-height: 0.01px;
   margin-bottom: 20px;
+  -webkit-animation: pop-out 3s  ease forwards, vission 3s  ease forwards;
+          animation: pop-out 3s  ease forwards, vission 3s  ease forwards;
+  opacity: 1;
 }
 
 .section .price {
@@ -140,34 +143,85 @@ body {
   bottom: 10px;
 }
 
-@-webkit-keyframes section {
+@-webkit-keyframes pop-out {
   0% {
-    -webkit-transform: scaleX(0);
-            transform: scaleX(0);
+    -webkit-transform: translateY(-200px);
+            transform: translateY(-200px);
   }
   50% {
-    -webkit-transform: scaleX(0.5);
-            transform: scaleX(0.5);
+    -webkit-transform: translateY(5px);
+            transform: translateY(5px);
   }
   100% {
-    -webkit-transform: scaleX(1);
-            transform: scaleX(1);
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
   }
 }
 
-@keyframes section {
+@keyframes pop-out {
   0% {
-    -webkit-transform: scaleX(0);
-            transform: scaleX(0);
+    -webkit-transform: translateY(-200px);
+            transform: translateY(-200px);
   }
   50% {
-    -webkit-transform: scaleX(0.5);
-            transform: scaleX(0.5);
+    -webkit-transform: translateY(5px);
+            transform: translateY(5px);
   }
   100% {
-    -webkit-transform: scaleX(1);
-            transform: scaleX(1);
+    -webkit-transform: translateY(10px);
+            transform: translateY(10px);
   }
+}
+
+@-webkit-keyframes vission {
+  0% {
+    opacity: 0.1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes vission {
+  0% {
+    opacity: 0.1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes tabhover {
+  from {
+    -webkit-transform: translateX(20px);
+            transform: translateX(20px);
+  }
+  to {
+    -webkit-transform: translateX(60px);
+            transform: translateX(60px);
+  }
+}
+
+@keyframes tabhover {
+  from {
+    -webkit-transform: translateX(20px);
+            transform: translateX(20px);
+  }
+  to {
+    -webkit-transform: translateX(60px);
+            transform: translateX(60px);
+  }
+}
+
+.section :hover {
+  -webkit-animation: tabhover 2s ease;
+          animation: tabhover 2s ease;
 }
 
 .button {
