--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@
   font-family: 'Roboto', sans-serif;
 }
 
+h2 {
+  padding: 20px;
+}
+
 .header {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -15,8 +19,7 @@
 }
 
 .header1 {
-  border-top: 4px inherit;
-  border-color: #1d1c1b;
+  border-top: 3px outset #b8b5b5;
   background-color: #f1f1f1;
   width: 100%;
   height: 3rem;
@@ -227,6 +230,7 @@
 .first .fa-heart:hover {
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
+  background-image: #9356dc;
   color: #9356dc;
 }
 
