--- a/menu.css
+++ b/menu.css
@@ -99,7 +99,7 @@ body {
   font-size: 30px;
 }
 
-.section {
+.section1 {
   background-color: #ffffff;
   width: 100%;
   height: 80px;
@@ -113,12 +113,14 @@ body {
           flex-direction: column;
   line-height: 0.01px;
   margin-bottom: 20px;
-  -webkit-animation: pop-out 3s linear forwards;
-          animation: pop-out 3s linear forwards;
-  opacity: 1;
+  -webkit-animation: pop-out 2s linear forwards;
+          animation: pop-out 2s linear forwards;
+  opacity: 0;
+  -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s;
 }
 
-.section .price {
+.section1 .price {
   font-weight: 800;
   font-size: 20px;
   display: -webkit-box;
@@ -131,79 +133,342 @@ body {
   left: -30px;
 }
 
-.section h4 {
+.section1 h4 {
   position: relative;
   left: 20px;
   font-size: 20px;
 }
 
-.section p {
+.section1 p {
   position: relative;
   left: 20px;
   bottom: 10px;
 }
 
+.section1 :hover {
+  position: absolute;
+  width: 10%;
+  height: 80px;
+  animation: check 2s reverse linear forwards;
+}
+
 @-webkit-keyframes pop-out {
-  0% {
-    -webkit-transform: translateY(-400px);
-            transform: translateY(-400px);
+  from {
     opacity: 0;
   }
-  50% {
-    -webkit-transform: translateY(5px);
-            transform: translateY(5px);
-    opacity: 0.5;
-  }
-  100% {
-    -webkit-transform: translateY(10px);
-            transform: translateY(10px);
+  to {
     opacity: 1;
   }
 }
 
 @keyframes pop-out {
-  0% {
-    -webkit-transform: translateY(-400px);
-            transform: translateY(-400px);
+  from {
     opacity: 0;
   }
-  50% {
-    -webkit-transform: translateY(5px);
-            transform: translateY(5px);
-    opacity: 0.5;
-  }
-  100% {
-    -webkit-transform: translateY(10px);
-            transform: translateY(10px);
+  to {
     opacity: 1;
   }
 }
 
-@-webkit-keyframes tabhover {
-  from {
-    left: 0px;
-    background-origin: #8cc24f;
+@-webkit-keyframes check {
+  0% {
+    width: 80%;
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
   }
-  to {
-    left: 80px;
-    background-color: #66b442;
+  50% {
+    width: 60%;
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
   }
-}
-
-@keyframes tabhover {
-  from {
-    left: 0px;
-    background-origin: #8cc24f;
-  }
-  to {
-    left: 80px;
-    background-color: #66b442;
+  100% {
+    width: 10%;
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
   }
 }
 
-.section :hover {
-  -webkit-animation: tabhover 2s ease forwards;
-          animation: tabhover 2s ease forwards;
+@keyframes check {
+  0% {
+    width: 80%;
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  50% {
+    width: 60%;
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+  100% {
+    width: 10%;
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+.section1 .fa-check-circle {
+  position: absolute;
+  color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-color: #99e2d0;
+  width: 80px;
+  height: 80px;
+  border-radius: 0px 25px 25px 0px;
+  right: 2%;
+}
+
+.section1 .fa-check-circle :hover {
+  position: absolute;
+  width: 50px;
+  height: 80px;
+}
+
+.section2 {
+  background-color: #ffffff;
+  width: 100%;
+  height: 80px;
+  border-radius: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  line-height: 0.01px;
+  margin-bottom: 20px;
+  -webkit-animation: pop-out 2s linear forwards;
+          animation: pop-out 2s linear forwards;
+  opacity: 0;
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s;
+}
+
+.section2 .price {
+  font-weight: 800;
+  font-size: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  position: relative;
+  bottom: 50px;
+  left: -30px;
+}
+
+.section2 h4 {
+  position: relative;
+  left: 20px;
+  font-size: 20px;
+}
+
+.section2 p {
+  position: relative;
+  left: 20px;
+  bottom: 10px;
+}
+
+.section2 :hover {
+  position: absolute;
+  width: 10%;
+  height: 80px;
+  animation: check 2s reverse linear forwards;
+}
+
+@keyframes pop-out {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes check {
+  0% {
+    width: 80%;
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  50% {
+    width: 60%;
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+  100% {
+    width: 10%;
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+.section3 {
+  background-color: #ffffff;
+  width: 100%;
+  height: 80px;
+  border-radius: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  line-height: 0.01px;
+  margin-bottom: 20px;
+  -webkit-animation: pop-out 2s linear forwards;
+          animation: pop-out 2s linear forwards;
+  opacity: 0;
+  -webkit-animation-delay: 0.8s;
+          animation-delay: 0.8s;
+}
+
+.section3 .price {
+  font-weight: 800;
+  font-size: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  position: relative;
+  bottom: 50px;
+  left: -30px;
+}
+
+.section3 h4 {
+  position: relative;
+  left: 20px;
+  font-size: 20px;
+}
+
+.section3 p {
+  position: relative;
+  left: 20px;
+  bottom: 10px;
+}
+
+.section3 :hover {
+  position: absolute;
+  width: 10%;
+  height: 80px;
+  animation: check 2s reverse linear forwards;
+}
+
+@keyframes pop-out {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes check {
+  0% {
+    width: 80%;
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  50% {
+    width: 60%;
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+  100% {
+    width: 10%;
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
+}
+
+.section4 {
+  background-color: #ffffff;
+  width: 100%;
+  height: 80px;
+  border-radius: 25px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  line-height: 0.01px;
+  margin-bottom: 20px;
+  -webkit-animation: pop-out 2s linear forwards;
+          animation: pop-out 2s linear forwards;
+  opacity: 0;
+  -webkit-animation-delay: 1.2s;
+          animation-delay: 1.2s;
+}
+
+.section4 .price {
+  font-weight: 800;
+  font-size: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
+  position: relative;
+  bottom: 50px;
+  left: -30px;
+}
+
+.section4 h4 {
+  position: relative;
+  left: 20px;
+  font-size: 20px;
+}
+
+.section4 p {
+  position: relative;
+  left: 20px;
+  bottom: 10px;
+}
+
+.section4 :hover {
+  position: absolute;
+  width: 10%;
+  height: 80px;
+  animation: check 2s reverse linear forwards;
+}
+
+@keyframes pop-out {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes check {
+  0% {
+    width: 80%;
+    -webkit-transform: rotate(0);
+            transform: rotate(0);
+  }
+  50% {
+    width: 60%;
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+  100% {
+    width: 10%;
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
 }
 
 .button {
