--- a/menu.scss
+++ b/menu.scss
@@ -13,8 +13,6 @@ $grey:#f1f1f1;
         flex-direction: column;
         line-height:0.01px; 
         margin-bottom: 20px;
-        
-
         .price{
             font-weight: 800;
             font-size: 20px;
@@ -34,43 +32,38 @@ $grey:#f1f1f1;
             left: 20px;
             bottom: 10px; 
         }
-        animation: pop-out 3s  linear forwards, ;
-                   opacity: 1;
+        animation: pop-out 2s linear forwards,
+                 ;
+         
+        :hover{
+            position: absolute;
+            width: 10%;
+            height: 80px;
+            
+            animation: check 2s reverse linear forwards ;
+            
+        }
                   
-        
-                   
-        
         @keyframes pop-out {
-            0% {
-                transform: translateY(-400px );
-                opacity: 0;
-            }
-
-            50%{
-                transform:translateY(5px);
-                opacity: 0.5;
-            }
-            100% {
-                transform:translateY(10px);
-                opacity: 1;
-            }   
-        }
-
-        @keyframes tabhover{
-          
-           from{left: 0px; background-origin: rgb(140, 194, 79); }
-            to{left: 80px; background-color: rgb(102, 180, 66);}
-            
-            
-        }
-
-        :hover{ 
-           animation: tabhover 2s ease forwards;
-           
-                  
-        }
-
+            from{ opacity: 0;}
+            to{ opacity: 1;}
+        }  
         
+        @keyframes check{
+            0%{
+                width: 80%;
+                transform: rotate(0);
+            }
+            50%{
+                width: 60%;
+                transform: rotate(180deg);
+            }
+            100%{
+            width: 10%;
+            transform: rotate(360deg);
+               
+            }
+        }
     }
     
 body{
@@ -151,11 +144,52 @@ body{
         font-size: 30px;
     }
 
-.section{
-        @include tab
-
+.section1{
+        @include tab;
+        opacity:0; 
+        animation-delay: 0.1s;
+        .fa-check-circle{
+            position: absolute;
+            color:white;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: $mint;
+            width: 80px;
+            height: 80px;
+            border-radius: 0px 25px 25px 0px;
+            right: 2%;
+            :hover{
+                position: absolute;
+                width: 50px;
+                height: 80px;
+                
+                 
+                
+            }
+        }
         
     }
+
+.section2{
+    @include tab;
+    opacity:0;
+    animation-delay: 0.4s;
+    
+}
+
+.section3{
+    @include tab;
+    opacity: 0;
+    animation-delay: 0.8s;
+}
+
+.section4{
+    @include tab;
+    opacity: 0;
+    animation-delay: 1.2s;
+
+}
 
     .button {
         background-color:$grey;
