--- a/styles.css
+++ b/styles.css
@@ -223,25 +223,25 @@ h2 {
   display: -ms-flexbox;
   display: flex;
   position: relative;
-  left: 90%;
+  left: 80%;
   bottom: 40px;
-  -webkit-transition: -webkit-transform 800ms;
-  transition: -webkit-transform 800ms;
-  transition: transform 800ms;
-  transition: transform 800ms, -webkit-transform 800ms;
   cursor: pointer;
+  font-size: 25px;
+  color: grey;
+}
+
+.first .fa-heart .fas .fa-heart {
+  display: none;
+  visibility: hidden;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#ff79da), to(#9356dc));
+  background-image: linear-gradient(#ff79da, #9356dc);
 }
 
 .first .fa-heart:hover {
-  -webkit-transform: scale(1.3);
-          transform: scale(1.3);
-  background-image: #9356dc;
-  color: #9356dc;
-}
-
-.first .fa-heart:hover :hover::after {
-  color: #9356dc;
-  background-color: #9356dc;
+  width: 30px;
+  height: 30px;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#ff79da), to(#9356dc));
+  background-image: linear-gradient(#ff79da, #9356dc);
 }
 
 .first img {
