--- a/styles.scss
+++ b/styles.scss
@@ -29,24 +29,21 @@ $grey:#f1f1f1;
     .fa-heart{
         display: flex;
         position: relative;
-        left: 90%;
+        left: 80%;
         bottom: 40px;
-        transition: transform 800ms;
         cursor: pointer;
-        &:hover {
-            transform: scale(1.3);
-            background-image: $purple;
-            color: $purple;
-            :hover::after{
-                color: $purple;
-                background-color:$purple;
-                
-                
-                
-                
-               
-                
-            }
+        font-size: 25px;
+        color: grey;
+        .fas .fa-heart{
+            display: none;
+            visibility: hidden;
+            background-image:linear-gradient(#ff79da, #9356dc);
+        }
+        &:hover { 
+            width: 30px;
+            height: 30px;
+             background-image:linear-gradient(#ff79da, #9356dc);
+             
             
             
             }
