--- a/menu.css
+++ b/menu.css
@@ -1,3 +1,21 @@
+@-webkit-keyframes sectionshrink {
+  from {
+    width: 100%;
+  }
+  to {
+    width: 80%;
+  }
+}
+
+@keyframes sectionshrink {
+  from {
+    width: 100%;
+  }
+  to {
+    width: 80%;
+  }
+}
+
 body {
   background-color: #f1f1f1;
 }
@@ -100,11 +118,12 @@ body {
 }
 
 .section1 {
-  opacity: 0;
+  cursor: pointer;
+  opacity: 1;
   -webkit-animation-delay: 0.1s;
           animation-delay: 0.1s;
   background-color: #ffff;
-  width: 425px;
+  width: 96%;
   height: 80px;
   border-radius: 25px;
   display: -webkit-box;
@@ -120,25 +139,29 @@ body {
           animation: pop-out 2s linear forwards;
 }
 
-.section1 .fa-check-circle {
+.section1:hover {
+  -webkit-animation: sectionshrink linear 1s forwards;
+          animation: sectionshrink linear 1s forwards;
+}
+
+.section1:hover .fa-check-circle {
   position: absolute;
-  color: white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  justify-items: center;
-  width: 70px;
-  height: 80px;
-  border-radius: 0px 25px 25px 0px;
-  right: 0%;
-}
-
-.section1 :hover {
-  -webkit-animation: slide 2s linear forwards;
-          animation: slide 2s linear forwards;
+  background-color: #99e2d0;
+  color: white;
+  width: 18%;
+  -webkit-transition: 3s ease;
+  transition: 3s ease;
+  -webkit-animation: slide linear 1s forwards;
+          animation: slide linear 1s forwards;
 }
 
 .section1 .price {
@@ -166,11 +189,6 @@ body {
   bottom: 10px;
 }
 
-.section1 :hover {
-  -webkit-animation: slide 2s  linear forwards;
-          animation: slide 2s  linear forwards;
-}
-
 @-webkit-keyframes pop-out {
   from {
     opacity: 0;
@@ -191,17 +209,17 @@ body {
 
 @-webkit-keyframes check {
   0% {
-    width: 80%;
+    width: 0%;
     -webkit-transform: rotate(0);
             transform: rotate(0);
   }
   50% {
-    width: 60%;
+    width: 10%;
     -webkit-transform: rotate(180deg);
             transform: rotate(180deg);
   }
   100% {
-    width: 10%;
+    width: 20%;
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg);
   }
@@ -209,17 +227,17 @@ body {
 
 @keyframes check {
   0% {
-    width: 80%;
+    width: 0%;
     -webkit-transform: rotate(0);
             transform: rotate(0);
   }
   50% {
-    width: 60%;
+    width: 10%;
     -webkit-transform: rotate(180deg);
             transform: rotate(180deg);
   }
   100% {
-    width: 10%;
+    width: 20%;
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg);
   }
@@ -227,49 +245,79 @@ body {
 
 @-webkit-keyframes slide {
   0% {
-    background-color: #99e2d0;
-    width: 5%;
-    -webkit-transform: translateX(0%);
-            transform: translateX(0%);
+    -webkit-transform: translateX(90%);
+            transform: translateX(90%);
+    width: 0px;
+    height: 80px;
+    left: 100%;
+    border-radius: 0px 25px 25px 0px;
+    p {
+      left: 10px;
+    }
   }
   50% {
-    background-color: #99e2d0;
-    width: 15%;
-    -webkit-transform: translateX(10%);
-            transform: translateX(10%);
+    -webkit-transform: translateX(80%);
+            transform: translateX(80%);
+    width: 50px;
+    height: 80px;
+    left: 80%;
+    border-radius: 0px 25px 25px 0px;
+    p {
+      left: 10px;
+    }
   }
   100% {
-    background-color: #99e2d0;
-    width: 20%;
-    -webkit-transform: translateX(20%);
-            transform: translateX(20%);
+    -webkit-transform: translateX(70%);
+            transform: translateX(70%);
+    width: 80px;
+    height: 80px;
+    left: 60%;
+    border-radius: 0px 25px 25px 0px;
+    p {
+      left: 10px;
+    }
   }
 }
 
 @keyframes slide {
   0% {
-    background-color: #99e2d0;
-    width: 5%;
-    -webkit-transform: translateX(0%);
-            transform: translateX(0%);
+    -webkit-transform: translateX(90%);
+            transform: translateX(90%);
+    width: 0px;
+    height: 80px;
+    left: 100%;
+    border-radius: 0px 25px 25px 0px;
+    p {
+      left: 10px;
+    }
   }
   50% {
-    background-color: #99e2d0;
-    width: 15%;
-    -webkit-transform: translateX(10%);
-            transform: translateX(10%);
+    -webkit-transform: translateX(80%);
+            transform: translateX(80%);
+    width: 50px;
+    height: 80px;
+    left: 80%;
+    border-radius: 0px 25px 25px 0px;
+    p {
+      left: 10px;
+    }
   }
   100% {
-    background-color: #99e2d0;
-    width: 20%;
-    -webkit-transform: translateX(20%);
-            transform: translateX(20%);
+    -webkit-transform: translateX(70%);
+            transform: translateX(70%);
+    width: 80px;
+    height: 80px;
+    left: 60%;
+    border-radius: 0px 25px 25px 0px;
+    p {
+      left: 10px;
+    }
   }
 }
 
 .section2 {
   background-color: #ffff;
-  width: 425px;
+  width: 96%;
   height: 80px;
   border-radius: 25px;
   display: -webkit-box;
@@ -286,11 +334,6 @@ body {
   opacity: 0;
   -webkit-animation-delay: 0.4s;
           animation-delay: 0.4s;
-}
-
-.section2 :hover {
-  -webkit-animation: slide 2s linear forwards;
-          animation: slide 2s linear forwards;
 }
 
 .section2 .price {
@@ -318,11 +361,6 @@ body {
   bottom: 10px;
 }
 
-.section2 :hover {
-  -webkit-animation: slide 2s  linear forwards;
-          animation: slide 2s  linear forwards;
-}
-
 @keyframes pop-out {
   from {
     opacity: 0;
@@ -334,17 +372,17 @@ body {
 
 @keyframes check {
   0% {
-    width: 80%;
+    width: 0%;
     -webkit-transform: rotate(0);
             transform: rotate(0);
   }
   50% {
-    width: 60%;
+    width: 10%;
     -webkit-transform: rotate(180deg);
             transform: rotate(180deg);
   }
   100% {
-    width: 10%;
+    width: 20%;
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg);
   }
@@ -352,28 +390,43 @@ body {
 
 @keyframes slide {
   0% {
-    background-color: #99e2d0;
-    width: 5%;
-    -webkit-transform: translateX(0%);
-            transform: translateX(0%);
+    -webkit-transform: translateX(90%);
+            transform: translateX(90%);
+    width: 0px;
+    height: 80px;
+    left: 100%;
+    border-radius: 0px 25px 25px 0px;
+    p {
+      left: 10px;
+    }
   }
   50% {
-    background-color: #99e2d0;
-    width: 15%;
-    -webkit-transform: translateX(10%);
-            transform: translateX(10%);
+    -webkit-transform: translateX(80%);
+            transform: translateX(80%);
+    width: 50px;
+    height: 80px;
+    left: 80%;
+    border-radius: 0px 25px 25px 0px;
+    p {
+      left: 10px;
+    }
   }
   100% {
-    background-color: #99e2d0;
-    width: 20%;
-    -webkit-transform: translateX(20%);
-            transform: translateX(20%);
+    -webkit-transform: translateX(70%);
+            transform: translateX(70%);
+    width: 80px;
+    height: 80px;
+    left: 60%;
+    border-radius: 0px 25px 25px 0px;
+    p {
+      left: 10px;
+    }
   }
 }
 
 .section3 {
   background-color: #ffff;
-  width: 425px;
+  width: 96%;
   height: 80px;
   border-radius: 25px;
   display: -webkit-box;
@@ -390,11 +443,6 @@ body {
   opacity: 0;
   -webkit-animation-delay: 0.8s;
           animation-delay: 0.8s;
-}
-
-.section3 :hover {
-  -webkit-animation: slide 2s linear forwards;
-          animation: slide 2s linear forwards;
 }
 
 .section3 .price {
@@ -422,11 +470,6 @@ body {
   bottom: 10px;
 }
 
-.section3 :hover {
-  -webkit-animation: slide 2s  linear forwards;
-          animation: slide 2s  linear forwards;
-}
-
 @keyframes pop-out {
   from {
     opacity: 0;
@@ -438,17 +481,17 @@ body {
 
 @keyframes check {
   0% {
-    width: 80%;
+    width: 0%;
     -webkit-transform: rotate(0);
             transform: rotate(0);
   }
   50% {
-    width: 60%;
+    width: 10%;
     -webkit-transform: rotate(180deg);
             transform: rotate(180deg);
   }
   100% {
-    width: 10%;
+    width: 20%;
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg);
   }
@@ -456,28 +499,43 @@ body {
 
 @keyframes slide {
   0% {
-    background-color: #99e2d0;
-    width: 5%;
-    -webkit-transform: translateX(0%);
-            transform: translateX(0%);
+    -webkit-transform: translateX(90%);
+            transform: translateX(90%);
+    width: 0px;
+    height: 80px;
+    left: 100%;
+    border-radius: 0px 25px 25px 0px;
+    p {
+      left: 10px;
+    }
   }
   50% {
-    background-color: #99e2d0;
-    width: 15%;
-    -webkit-transform: translateX(10%);
-            transform: translateX(10%);
+    -webkit-transform: translateX(80%);
+            transform: translateX(80%);
+    width: 50px;
+    height: 80px;
+    left: 80%;
+    border-radius: 0px 25px 25px 0px;
+    p {
+      left: 10px;
+    }
   }
   100% {
-    background-color: #99e2d0;
-    width: 20%;
-    -webkit-transform: translateX(20%);
-            transform: translateX(20%);
+    -webkit-transform: translateX(70%);
+            transform: translateX(70%);
+    width: 80px;
+    height: 80px;
+    left: 60%;
+    border-radius: 0px 25px 25px 0px;
+    p {
+      left: 10px;
+    }
   }
 }
 
 .section4 {
   background-color: #ffff;
-  width: 425px;
+  width: 96%;
   height: 80px;
   border-radius: 25px;
   display: -webkit-box;
@@ -494,11 +552,6 @@ body {
   opacity: 0;
   -webkit-animation-delay: 1.2s;
           animation-delay: 1.2s;
-}
-
-.section4 :hover {
-  -webkit-animation: slide 2s linear forwards;
-          animation: slide 2s linear forwards;
 }
 
 .section4 .price {
@@ -526,11 +579,6 @@ body {
   bottom: 10px;
 }
 
-.section4 :hover {
-  -webkit-animation: slide 2s  linear forwards;
-          animation: slide 2s  linear forwards;
-}
-
 @keyframes pop-out {
   from {
     opacity: 0;
@@ -542,17 +590,17 @@ body {
 
 @keyframes check {
   0% {
-    width: 80%;
+    width: 0%;
     -webkit-transform: rotate(0);
             transform: rotate(0);
   }
   50% {
-    width: 60%;
+    width: 10%;
     -webkit-transform: rotate(180deg);
             transform: rotate(180deg);
   }
   100% {
-    width: 10%;
+    width: 20%;
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg);
   }
@@ -560,22 +608,37 @@ body {
 
 @keyframes slide {
   0% {
-    background-color: #99e2d0;
-    width: 5%;
-    -webkit-transform: translateX(0%);
-            transform: translateX(0%);
+    -webkit-transform: translateX(90%);
+            transform: translateX(90%);
+    width: 0px;
+    height: 80px;
+    left: 100%;
+    border-radius: 0px 25px 25px 0px;
+    p {
+      left: 10px;
+    }
   }
   50% {
-    background-color: #99e2d0;
-    width: 15%;
-    -webkit-transform: translateX(10%);
-            transform: translateX(10%);
+    -webkit-transform: translateX(80%);
+            transform: translateX(80%);
+    width: 50px;
+    height: 80px;
+    left: 80%;
+    border-radius: 0px 25px 25px 0px;
+    p {
+      left: 10px;
+    }
   }
   100% {
-    background-color: #99e2d0;
-    width: 20%;
-    -webkit-transform: translateX(20%);
-            transform: translateX(20%);
+    -webkit-transform: translateX(70%);
+            transform: translateX(70%);
+    width: 80px;
+    height: 80px;
+    left: 60%;
+    border-radius: 0px 25px 25px 0px;
+    p {
+      left: 10px;
+    }
   }
 }
 
