--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ h2 {
 }
 
 .header1 {
-  border-top: 3px outset #b8b5b5;
+  outline: 2px solid  grey;
   background-color: #f1f1f1;
   width: 100%;
   height: 3rem;
@@ -105,7 +105,7 @@ h2 {
 }
 
 .works {
-  width: 95%;
+  width: 96%;
   height: 70px;
   background-color: #f1f1f1;
   border-radius: 20px;
@@ -230,16 +230,9 @@ h2 {
   color: grey;
 }
 
-.first .fa-heart .fas .fa-heart {
+.first .fa-heart:hover .fa-heart {
   display: none;
   visibility: hidden;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#ff79da), to(#9356dc));
-  background-image: linear-gradient(#ff79da, #9356dc);
-}
-
-.first .fa-heart:hover {
-  width: 30px;
-  height: 30px;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#ff79da), to(#9356dc));
   background-image: linear-gradient(#ff79da, #9356dc);
 }
